[metadata]
name = fluidity
version = 0.1
description = Fluidity python files
author = The ICOM team
author_email = patrick.farrell06@imperial.ac.uk
url = https://www.imperial.ac.uk/earth-science/research/research-groups/amcg/

[options]
packages = fluidity, fluidity.diagnostics
py_modules = fluidity_tools, GFD_basisChange_tools, vtktools
